docs: update copilot-instructions.md to match current codebase